--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Monochrome Music",
   "short_name": "Monochrome",
   "description": "A minimalist music streaming application",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "display_override": [
     "window-controls-overlay"
@@ -12,19 +12,19 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/assets/appicon.png",
+      "src": "assets/appicon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/appicon.png",
+      "src": "assets/appicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/appicon.png",
+      "src": "assets/appicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
@@ -39,10 +39,10 @@
       "name": "Search",
       "short_name": "Search",
       "description": "Search for music",
-      "url": "/search",
+      "url": "./#search",
       "icons": [
         {
-          "src": "/assets/96.png",
+          "src": "assets/96.png",
           "sizes": "96x96",
           "type": "image/png"
         }
