Fix: Implement efficient streaming downloads with client-zip
- Replaces JSZip with 'client-zip' to enable true streaming ZIP generation, preventing memory crashes on large downloads.
- Integrates 'StreamSaver.js' with a robust local MITM configuration for cross-browser compatibility.
- Uses native File System Access API where available (Chrome/Edge/Vivaldi) for direct-to-disk streaming.
- Preserves existing single-track download functionality.

--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "devDependencies": {
     "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0"
+  },
+  "dependencies": {
+    "client-zip": "^2.5.0",
+    "streamsaver": "^2.0.6"
   }
 }
