--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
   "dependencies": {
     "client-zip": "^2.5.0",
     "streamsaver": "^2.0.6"
+  },
+  "overrides": {
+    "sourcemap-codec": "npm:@jridgewell/sourcemap-codec@^1.4.14",
+    "source-map": "^0.7.4"
   }
 }
